[metadata]
name = basicpkg
version = 1.0.0
author = Sourav De
author_email = srvz39@gmail.com
description = A Python package to monitor network up/down stream
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Sr-vZ/pynetmon
project_urls =
    Bug Tracker = https://github.com/Sr-vZ/pynetmon/-/issues
    repository = https://github.com/Sr-vZ/pynetmon
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src